--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ Indoor Navigation</title>
                 <span class="author-block">
                   <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Jungmo Koo</a><sup>*</sup>,</span>
                   <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Jongseob Yun</a></span>
+                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Jongseob Yun</a></span>,
                     <span class="author-block">
                       <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Soonyong Park</a></span>
                   </div>
