--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
   <title>PeneBEV</title>
-  <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="static/images/naver_labs_favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
 
@@ -262,7 +262,7 @@ Indoor Navigation</h1>
 
 
 <!-- Paper poster -->
-<section class="hero is-small is-light">
+<!-- <section class="hero is-small is-light">
   <div class="hero-body">
     <div class="container">
       <h2 class="title">Poster</h2>
@@ -272,7 +272,7 @@ Indoor Navigation</h1>
         
       </div>
     </div>
-  </section>
+  </section> -->
 <!--End paper poster -->
 
 
