--- a/index.html
+++ b/index.html
@@ -248,8 +248,8 @@
 
             <div class="publication-video">
               <!-- Youtube embed code here -->
-              <iframe src="https://www.youtube.com/embed/JkaxUblCGz0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-              <!-- <iframe src="https://youtu.be/j_xf1Idb9H0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> -->
+              <!-- <iframe src="https://www.youtube.com/embed/JkaxUblCGz0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> -->
+              <iframe src="https://www.youtube.com/embed/j_xf1Idb9H0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
             </div>
           </div>
         </div>
