--- a/index.html
+++ b/index.html
@@ -196,33 +196,29 @@
 
 
   <!-- Image carousel -->
-  <section class="hero is-small">
+  <!-- <section class="hero is-small">
     <div class="hero-body">
       <div class="container">
         <div id="results-carousel" class="carousel results-carousel">
           <div class="item">
-            <!-- Your image here -->
             <img src="static/images/carousel1.jpg" alt="MY ALT TEXT" />
             <h2 class="subtitle has-text-centered">
               First image description.
             </h2>
           </div>
           <div class="item">
-            <!-- Your image here -->
             <img src="static/images/carousel2.jpg" alt="MY ALT TEXT" />
             <h2 class="subtitle has-text-centered">
               Second image description.
             </h2>
           </div>
           <div class="item">
-            <!-- Your image here -->
             <img src="static/images/carousel3.jpg" alt="MY ALT TEXT" />
             <h2 class="subtitle has-text-centered">
               Third image description.
             </h2>
           </div>
           <div class="item">
-            <!-- Your image here -->
             <img src="static/images/carousel4.jpg" alt="MY ALT TEXT" />
             <h2 class="subtitle has-text-centered">
               Fourth image description.
@@ -231,7 +227,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <!-- End image carousel -->
 
 
@@ -327,9 +323,9 @@
         <div class="column is-8">
           <div class="content">
 
-            <p>
+            <!-- <p>
               This work was supported by Korea Evaluation Institute Of Industrial Technology (KEIT) grant funded by the Korea government(MOTIE) (No.20023455, Development of Cooperate Mapping, Environment Recognition and Autonomous Driving Technology for Multi Mobile Robots Operating in Large-scale Indoor Workspace).
-            </p>
+            </p> -->
 
             <p>
               <!-- This page was built using the <a href="https://github.com/eliahuhorwitz/Academic-project-page-template"
