--- a/index.html
+++ b/index.html
@@ -234,7 +234,8 @@
 
 
   <!-- Youtube video -->
-  <section class="hero is-small is-light">
+  <!-- <section class="hero is-small is-light"> -->
+  <section class="hero is-small">
     <div class="hero-body">
       <div class="container">
         <!-- Paper video. -->
